--- a/pjt-BroadcastSpeaker/pom.xml
+++ b/pjt-BroadcastSpeaker/pom.xml
@@ -179,13 +179,8 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.9.6</version>
 		</dependency>
-		<!-- 
-		<dependency>
-			<groupId>com.fasterxml.jackson.dataformat</groupId>
-			<artifactId>jackson-dataformat-xml</artifactId>
-			<version>2.9.6</version>
-		</dependency>
--->
+		<!-- <dependency> <groupId>com.fasterxml.jackson.dataformat</groupId> <artifactId>jackson-dataformat-xml</artifactId> 
+			<version>2.9.6</version> </dependency> -->
 		<!-- thumbnail -->
 		<dependency>
 			<groupId>net.coobird</groupId>
@@ -299,8 +294,34 @@
 		</dependency>
 
 
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 
-
+<!-- Spring Security -->
+<dependency>
+ <groupId>org.springframework.security</groupId>
+ <artifactId>spring-security-core</artifactId>
+ <version>${org.springframework-version}</version>
+</dependency>
+<dependency>
+ <groupId>org.springframework.security</groupId>
+ <artifactId>spring-security-config</artifactId>
+ <version>${org.springframework-version}</version>
+</dependency>
+<dependency>
+ <groupId>org.springframework.security</groupId>
+ <artifactId>spring-security-web</artifactId>
+ <version>${org.springframework-version}</version>
+</dependency>
+<dependency>
+ <groupId>org.springframework.security</groupId>
+ <artifactId>spring-security-taglibs</artifactId>
+ <version>${org.springframework-version}</version>
+</dependency>
 
 
 	</dependencies>
