--- a/pjt-BroadcastSpeaker/src/main/resources/profiles/test/application.properties
+++ b/pjt-BroadcastSpeaker/src/main/resources/profiles/test/application.properties
@@ -1,4 +1,4 @@
-uploads.location: /opt/codehouse/uploads
+uploads.location: /opt/seoyeon/uploads
 uploads.uri_path: /uploads
 
-logback.location: opt/codehouse/logs
+logback.location: opt/seoyeon/logs
