--- a/pjt-BroadcastSpeaker/src/main/resources/profiles/dev/application.properties
+++ b/pjt-BroadcastSpeaker/src/main/resources/profiles/dev/application.properties
@@ -1,4 +1,4 @@
-uploads.location: C:/test/uploads
+uploads.location: C:/test/seoyeon/uploads
 uploads.uri_path: /uploads
 
-logback.location: C:/test/logs
+logback.location: C:/test/seoyeon/logs
