--- a/pjt-BroadcastSpeaker/pom.xml
+++ b/pjt-BroadcastSpeaker/pom.xml
@@ -253,14 +253,6 @@
 
 
 
-		<!-- Test -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.7</version>
-			<scope>test</scope>
-		</dependency>
-
 		<!-- AWS transcribe, polly <dependency> <groupId>software.amazon.awssdk</groupId> 
 			<artifactId>transcribe</artifactId> </dependency> <dependency> <groupId>software.amazon.awssdk</groupId> 
 			<artifactId>transcribestreaming</artifactId> </dependency> <dependency> <groupId>software.amazon.awssdk</groupId> 
@@ -294,12 +286,12 @@
 		</dependency>
 
 
-		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+		<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt 
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
-		</dependency>
+		</dependency>-->
 
 		<!-- Spring Security -->
 		<dependency>
@@ -333,6 +325,7 @@
 			<artifactId>spring-security-jwt</artifactId>
 			<version>1.1.0.RELEASE</version>
 		</dependency>
+
 
 
 	</dependencies>
@@ -382,6 +375,7 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
+
 
 			<!-- polly -->
 			<plugin>
