Add mybatis 로그 설정, profile aws 추가

--- a/pjt-BroadcastSpeaker/src/main/resources/profiles/dev/application.properties
+++ b/pjt-BroadcastSpeaker/src/main/resources/profiles/dev/application.properties
@@ -2,3 +2,7 @@ tts.location: D:/Windows/StsTest/seoyeon/tts
 tts.uri_path: /tts
 
 logback.location: D:/Windows/StsTest/seoyeon/logs
+
+db.url: jdbc:log4jdbc:mysql://itbuddy.iptime.org:8233/seoyeon
+db.userName: seoyeon
+db.password: seoyeon
