프로퍼티에서 DB 연결 설정 변경

--- a/pjt-BroadcastSpeaker/src/main/resources/profiles/test/application.properties
+++ b/pjt-BroadcastSpeaker/src/main/resources/profiles/test/application.properties
@@ -3,6 +3,6 @@ uploads.uri_path: /tts
 
 logback.location: /opt/seoyeon/logs
 
-db.url: jdbc:mysql://itbuddy.iptime.org:8233/seoyeon
+db.url: jdbc:log4jdbc:mysql://itbuddy.iptime.org:8233/seoyeon
 db.userName: seoyeon
 db.password: seoyeon
