--- a/pjt-BroadcastSpeaker/src/main/resources/profiles/aws/application.properties
+++ b/pjt-BroadcastSpeaker/src/main/resources/profiles/aws/application.properties
@@ -3,6 +3,6 @@ uploads.uri_path: /tts
 
 logback.location: /opt/seoyeon/logs
 
-db.url: jdbc:mysql://loalhost:3306/seoyeon
+db.url: jdbc:log4jdbc:mysql://loalhost:3306/seoyeon
 db.userName: seoyeon
 db.password: seoyeon
