--- a/pjt-BroadcastSpeaker/src/main/resources/profiles/test/application.properties
+++ b/pjt-BroadcastSpeaker/src/main/resources/profiles/test/application.properties
@@ -1,5 +1,5 @@
-uploads.location: /opt/seoyeon/tts
-uploads.uri_path: /tts
+tts.location: /opt/seoyeon/tts
+tts.uri_path: /tts
 
 logback.location: /opt/seoyeon/logs
 
