--- a/pjt-BroadcastSpeaker/src/main/resources/profiles/dev/application.properties
+++ b/pjt-BroadcastSpeaker/src/main/resources/profiles/dev/application.properties
@@ -3,6 +3,6 @@ tts.uri_path: /tts
 
 logback.location: D:/Windows/StsTest/seoyeon/logs
 
-db.url: jdbc:log4jdbc:mysql://itbuddy.iptime.org:8233/seoyeon
+db.url: jdbc:log4jdbc:mysql://itbuddy.iptime.org:8233/seoyeon-dev
 db.userName: seoyeon
 db.password: seoyeon
